--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+ 
+ color:#fff;
+}
+* :hover{
+    color:#fff;
+    /* background-color: green; */
+}
+body{
+  background-image: url('co5.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.hh{
+  display: flex;
+  justify-content: center;
+}
+.he h2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mm{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+
+
+
+/* 
+@media (max-width:700px){
+  .mm {
+    width:100%;
+    height:290px;
+    margin-right:0;
+    float:none;
+  }
+  .mm .card_inner{
+    height:290px;
+  }
+
+} */
+
+footer p{
+  display: flex;
+  justify-content: center;
+
 }
